# lost-oppai

./: .gitignore  CREDITS.md  Cargo.toml  LICENSE  README.md  push_to_itch.sh
.github/workflows/: ci.yml  release.yml
assets/dialogue/: DUMMY.yarn  eleonore.yarn  hello_world.yarn  ionas-and-antonius.yarn  isabelle.yarn  joanna.yarn  jotem.yarn  paladins.yarn  tmp.yarn
assets/map/fauna/: bird.trickfilm
assets/npc/: antonius.trickfilm  dorothea.trickfilm  eleonore.trickfilm  ionas.trickfilm  isabelle.trickfilm  joanna.trickfilm  sven.trickfilm
assets/player/: player.trickfilm
assets/ui/: dialogue_start_hint.trickfilm
assets/ui/keys/: keys.trickfilm
dialogue_graph/: Cargo.toml  DUMMY.dot  DUMMY.yarn
dialogue_graph/src/: main.rs  test.rs
dialogue_lines/: Cargo.toml
dialogue_lines/src/: main.rs
src/: assets.rs  main.rs  map.rs
src/audio/: bgm.rs  mod.rs  sound.rs  spacial.rs
src/npc/: audio.rs  mod.rs  spawn.rs
src/player/: audio.rs  chat.rs  collision.rs  input.rs  mod.rs  movement.rs  spawn.rs  state.rs
src/ui/: audio_bar.rs  ending_text.rs  keyboard_hint.rs  main_menu.rs  mod.rs  screen_fade.rs  splash_screen.rs
src/ui/dialogue/: audio.rs  command.rs  mod.rs  option_selection.rs  runner.rs  setup.rs  spawn.rs  start_hint.rs  test.rs  typewriter.rs  updating.rs
src/utils/: debug.rs  mod.rs
src/world/: camera.rs  camera_shake.rs  ending.rs  mod.rs
src/world/map/: chunk_manager.rs  collision.rs  fauna.rs  flora.rs  generation.rs  mod.rs  poisson_sampling.rs  render.rs
src/world/map/generation/: bitmap.rs  bitmask.rs  graph.rs  mod.rs  path.rs
wasm/: index.html
