[package]
name = "lost-oppai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# https://github.com/rust-lang/cargo/issues/4897
[profile.wasm]
inherits = "release"
panic = "abort"
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
rand = "0.8.5"
chrono = "0.4.34"

bevy = "0.12.1"
bevy_asset_loader = { version = "0.19.1", features = ["2d"] }
bevy_ecs_tilemap = "0.12.0"
bevy_rapier2d = "0.24.0"
bevy_kira_audio = "0.19.0"
bevy_trickfilm = { git = "https://github.com/PraxTube/bevy_trickfilm", branch = "main" }
noisy_bevy = "0.5.0"
